objects/mmeWord__c.object
<CustomObject><fields>
        <fullName>attribute__c</fullName>
        <description>the attribute of the word, eg. is it a noun, a verb, or a adjective?</description>
        <inlineHelpText>E.g. if a word is a noun, then choose n.</inlineHelpText>
        <label>attribute</label>
        <picklist>
            <picklistValues>
                <fullName>adj.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>adv.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vt.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>example_sentence__c</fullName>
        <description>example sentence.</description>
        <inlineHelpText>example sentence.</inlineHelpText>
        <label>e.g.</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>example_writings__c</fullName>
        <description>Example_Writings</description>
        <inlineHelpText>Example_Writings</inlineHelpText>
        <label>e.g.</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>meaning__c</fullName>
        <description>meaning of the word</description>
        <label>meaning</label>
        <required>true</required>
        <type>TextArea</type>
    </fields><fields>
        <fullName>mmeWordDomain__c</fullName>
        <description>words level, e.g. TOFEL words</description>
        <label>mmeWordDomain</label>
        <picklist>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middleschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College-L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College-L6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOFEL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>mmeWord</label><nameField>
        <label>mmeWord</label>
        <type>Text</type>
    </nameField><pluralLabel>mmeWords</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>